Add html structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,69 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <header>
+    <img src="" alt="">
+    <h1>TU COCINA AL DÍA</h1>
+  </header>
+  <main>
+    <div>
+      <div>
+        <p>Elige los ingredientes del plato del día y disfruta de una comida sana.</p>
+      </div>
+      <div>
+        <section>
+          <p>INGREDIENTES</p>
+          <H2>Nombre del plato</H2>
+          <a href="">Seleccionar todo</a> | <a href="">Deseleccionar todo</a>
+        </section>
+        <section>
+          <ul>
+            <li>
+              <div>
+                <input type="checkbox" name="" value="">
+                <input type="text">
+                <div>
+                  <h3>Artículo</h3>
+                  <p>Marca</p>
+                  <p>x Kg</p>
+                </div>
+                <p>X,XX €</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <input type="checkbox" name="" value="">
+                <input type="text">
+                <div>
+                  <h3>Artículo</h3>
+                  <p>Marca</p>
+                  <p>x Kg</p>
+                </div>
+                <p>X,XX €</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <p>Items: <span>1</span></p>
+          <div>
+            <span>Subtotal</span>
+            <span>2,95 €</span>
+          </div>
+          <div>
+            <span>Gastos de envío</span>
+            <span>7,00 €</span>
+          </div>
+          <div>
+            <span>Total</span>
+            <span>9,95 €</span>
+          </div>
+          <button type="submit" name="button">Comprar ingredientes <span>9,95 €</span></button>
+        </section>
+      </div>
+    </div>
+  </main>
+
   <script type="text/javascript" src="js/main.js" charset="utf-8"></script>
 </body>
 </html>
