--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     </div>
   </main>
 
-  <script type="text/javascript" src="js/main.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/main.min.js" charset="utf-8"></script>
 </body>
 </html>
