Select all funtion

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <section class="section section--head">
           <p>INGREDIENTES</p>
           <H2 class="title--dish">Nombre del plato</H2>
-          <a href="">Seleccionar todo</a> | <a href="">Deseleccionar todo</a>
+          <a class="check-all" href="">Seleccionar todo</a> | <a class="uncheck-all" href="">Deseleccionar todo</a>
         </section>
         <section class="section section--body">
           <ul class="items-list">
-            
+
           </ul>
         </section>
         <section class="section section--footer">
