Add Shipping Cost

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="section section--head">
           <p>INGREDIENTES</p>
           <H2 class="title--dish">Nombre del plato</H2>
-          <a class="check-all" href="">Seleccionar todo</a> | <a class="uncheck-all" href="">Deseleccionar todo</a>
+          <a class="btn--check-all" href="">Seleccionar todo</a> | <a class="btn--uncheck-all" href="">Deseleccionar todo</a>
         </section>
         <section class="section section--body">
           <ul class="items-list">
@@ -37,7 +37,7 @@
           </div>
           <div class="footer__section">
             <span>Gastos de envío</span>
-            <span class="bold">7,00 €</span>
+            <span class="shipping-cost bold">7,00 €</span>
           </div>
           <div class="footer__section">
             <span class="bold">Total</span>
