Add function to recalculate sum of current list of prices

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p>Items: <span class="bold">1</span></p>
           <div class="footer__section">
             <span>Subtotal</span>
-            <span class="bold">2,95 €</span>
+            <span class="subtotal bold">2,95 €</span>
           </div>
           <div class="footer__section">
             <span>Gastos de envío</span>
