--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="bold">Total</span>
             <span class="total-price bold">9,95 €</span>
           </div>
-          <button type="submit" class="purchase__btn" name="button">Comprar ingredientes <span>9,95 €</span></button>
+          <button type="submit" class="purchase__btn" name="button">Comprar ingredientes <span class="price-button">9,95 €</span></button>
         </section>
       </div>
     </div>
