Function to sumarize num of items

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </section>
         <section class="section section--footer">
-          <p>Items: <span class="bold">1</span></p>
+          <p>Items: <span class="num-items bold">1</span></p>
           <div class="footer__section">
             <span>Subtotal</span>
             <span class="subtotal bold">2,95 €</span>
